syntax = "proto3";
option go_package = "github.com/yeencloud/svc-identity/contract/proto;identityService";

message IDLookupRequest {
  string name_or_email = 1;
}

message IDLookupResponse {
  string id = 1;
}

message ProfileLookupRequest {
  string id = 1;
}

message ProfileLookupResponse {
  string id = 1;
  string email = 2;
  string username = 3;
}
